merge plus experimental changes